[package]
edition = "2021"
name = "gem"
version = "0.2.0"
[[bin]]
name = "gem"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.37" 
dotenv = "0.15.0"
# futures = "0.3" # for our async / await blocks
lettre = "0.11.7"
# reqwest = {version = "0.12.3", features = ["json"]}# reqwest with JSON parsing support      
reqwest = "0.12.3"
scraper = "0.19.0"
# serde = {version = "1.0.197", features = ["std", "derive"]} 
tokio = {version = "1.12.0", features = ["full"]}# for our async runtime
